--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,58 @@ mobile= #f29e33
 website= #d863a1
 sales= #b0c926
 header= background #FFFFFF
+main= background 
 
 */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #eaebec;
+
 }
+header{
+    background-color: #ffffff;
+}
+.title{
+    display: inline-block;
+    font-size: 52px;
+    font:bold;
+    background-color: white;
+}
+header img{
+    background-color: #FFFFFF;
+}
+.box1{
+    width: 500px;
+    height: 35px;
+    background-color: white;
+    margin: 10px auto;
+}
+.button{
+    background-color: #45ABEA;
+    border: none;
+    color: white;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+    margin: 4px;
+}
+.section{
+    background-color: white;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3px;
+    margin: 4px;
+ }
+ .box2{
+    width: 500px;
+    height: 500px;
+    background-color: #FFFFFF;
+    margin:auto;
+ }
