--- a/css/style.css
+++ b/css/style.css
@@ -75,31 +75,39 @@ header img{
     padding: 5px;
  }
 .circle{
-    width: 10px;
-    height: 10px;
+    width: 45px;
+    height: 15px;
     border-radius: 50%;
     background-color: black;
     display: inline-block;
+    padding: 8px;
+    color: white;
+    text-align: center;
+    line-height: 5px;
+    font-size: 9px;
  }
 #editorial{
     background-color:  #45ABEA;
 }
 #Q1goals{
-    color: #9C72E4;
+    background-color: #9C72E4;
 }
 #mobile{
-    color :#f29e33;
+    background-color :#f29e33;
 }
 #sales{
-    color: #b0c926;
+    background-color: #b0c926;
 }
 #website{
-    color: #d863a1;
+    background-color: #d863a1;
 }
 #recrutling{
-    color: #64c0a9;
+    background-color: #64c0a9;
 }
 .first{
     font-size: 32px;
     font-weight: bold;
+}
+&check{
+    color:green
 }
